src/test/compile-fail/empty-vec-trailing-comma.rs
fn main() {
    let v = ~[,]; //~ ERROR unexpected token: ','
}
